# django-web-project

./: .coveragerc  .env.example  .flake8  .gitignore  README.md  cobertura.xml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
albums/: models.py  urls.py  views.py
albums/tests/: test_views.py
artists/: apps.py  views.py
artists/tests/: test_views.py  test_views_setup.py
authentication/: admin.py  models.py  serializers.py  urls.py  views.py
authentication/tests/: test_setup.py  test_views.py  test_views_setup.py
backend/: pyproject.toml
backend/albums/: apps.py  views.py
backend/artists/: models.py  serializers.py  urls.py  views.py
backend/authentication/: admin.py  models.py  serializers.py  urls.py  views.py
backend/core/: settings.py  urls.py
backend/genres/: models.py  urls.py  views.py
backend/playlists/: models.py  views.py
backend/tracks/: models.py  views.py
core/: celery.py  settings.py  urls.py  views.py
frontend/: .env.example  index.html  package.json
frontend/src/: App.tsx  env.d.ts  main.tsx
frontend/src/components/Navbar/: Navbar.tsx  (+2 more)
frontend/src/http/: index.ts
frontend/src/store/: store.ts
genres/: serializers.py  views.py
genres/tests/: test_setup.py  test_views.py  test_views_setup.py
management/management/commands/: beat.py  flower.py  worker.py
playlists/: models.py  serializers.py  tasks.py  urls.py  views.py
playlists/tests/: test_setup.py  test_views.py  test_views_setup.py
tracks/: serializers.py  urls.py  views.py
tracks/tests/: test_setup.py  test_views.py
(+4 files in other folders)
